<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.matteobertozzi</groupId>
  <artifactId>tashkewey-core</artifactId>
  <version>0.1.7</version>

  <name>tashkewey-core</name>
  <description>Gateway for Tasks - core/common logic.</description>
  <url>https://github.com/matteobertozzi/tashkewey</url>

  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2</url>
    </repository>
    <repository>
      <id>oss.sonatype</id>
      <url>https://s01.oss.sonatype.org/content/repositories/releases</url>
    </repository>
    <repository>
      <id>oss.sonatype.snapshots</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:git://github.com/matteobertozzi/tashkewey.git</connection>
    <developerConnection>scm:git:ssh://github.com:matteobertozzi/tashkewey.git</developerConnection>
    <url>https://github.com/matteobertozzi/tashkewey</url>
  </scm>
  <developers>
    <developer>
      <name>Matteo Bertozzi</name>
      <email>mbertozzi@apache.org</email>
      <organization>th30z</organization>
      <organizationUrl>https://matteobertozzi.github.io/</organizationUrl>
    </developer>
  </developers>

  <properties>
    <rednaco.version>3.0.5</rednaco.version>
    <easer.insights.version>1.0.5</easer.insights.version>

    <caffeine.version>3.1.8</caffeine.version>
    <jctools.version>4.0.2</jctools.version>
    <tika.version>3.0.0</tika.version>

    <jwt.version>4.4.0</jwt.version>
    <jwk.rsa.version>0.22.1</jwk.rsa.version>

    <junit.version>5.11.4</junit.version>

    <maven.gpg.version>3.2.7</maven.gpg.version>
    <maven.jar.version>3.4.2</maven.jar.version>
    <maven.compiler.version>3.13.0</maven.compiler.version>
    <maven.source.version>3.3.1</maven.source.version>
    <maven.javadoc.version>3.11.2</maven.javadoc.version>
    <maven.surefire.version>3.5.2</maven.surefire.version>
    <maven.failsafe.version>3.5.2</maven.failsafe.version>
    <maven.dependency.version>3.8.1</maven.dependency.version>
    <nexus.staging.maven.version>1.7.0</nexus.staging.maven.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.github.matteobertozzi</groupId>
      <artifactId>rednaco-dispatcher</artifactId>
      <version>${rednaco.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.matteobertozzi</groupId>
      <artifactId>rednaco-dispatcher-processor</artifactId>
      <version>${rednaco.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.github.matteobertozzi</groupId>
      <artifactId>rednaco-plugins-processor</artifactId>
      <version>${rednaco.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.github.matteobertozzi</groupId>
      <artifactId>easer-insights</artifactId>
      <version>${easer.insights.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.matteobertozzi</groupId>
      <artifactId>easer-insights-profiler</artifactId>
      <version>${easer.insights.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.matteobertozzi</groupId>
      <artifactId>easer-insights-influx</artifactId>
      <version>${easer.insights.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.matteobertozzi</groupId>
      <artifactId>easer-insights-aws-cloudwatch</artifactId>
      <version>${easer.insights.version}</version>
    </dependency>

    <!-- Caches -->
    <dependency>
      <groupId>com.github.ben-manes.caffeine</groupId>
      <artifactId>caffeine</artifactId>
      <version>${caffeine.version}</version>
    </dependency>


    <!-- [ tika (used for blobs, file type discovery) ] -->
    <dependency>
      <groupId>org.apache.tika</groupId>
      <artifactId>tika-core</artifactId>
      <version>${tika.version}</version>
    </dependency>

    <!-- JWT -->
    <dependency>
      <groupId>com.auth0</groupId>
      <artifactId>java-jwt</artifactId>
      <version>${jwt.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.auth0</groupId>
      <artifactId>jwks-rsa</artifactId>
      <version>${jwk.rsa.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <!-- Unit Tests Related -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <release>21</release>
          <compilerArgs>
            <arg>-proc:full</arg>
            <arg>-parameters</arg>
            <arg>-Xlint:all</arg>
          </compilerArgs>
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven.jar.version}</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
            </manifest>
            <manifestEntries>
              <mode>development</mode>
              <builtBy>${user.name}</builtBy>
              <buildTimestamp>${maven.build.timestamp}</buildTimestamp>
              <gitBranch>${git.branch}</gitBranch>
              <gitHash>${git.hash}</gitHash>
            </manifestEntries>
          </archive>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven.failsafe.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>${maven.dependency.version}</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
              <includeScope>runtime</includeScope>
              <overWriteReleases>false</overWriteReleases>
              <overWriteSnapshots>false</overWriteSnapshots>
              <overWriteIfNewer>true</overWriteIfNewer>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven.source.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven.javadoc.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>${maven.gpg.version}</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>${nexus.staging.maven.version}</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
